# PC_WIN

./: CLEANUP_PROPOSAL.md  README.md  RUNME_TEST.ps1
tests/pcl_hybrid/: CMakeLists.txt  Makefile  PCWinPointCloud.cpp  PCWinPointCloud.h  PCWinRegionGrowing.cpp  PCWinRegionGrowing.h  PlaneAwareRegionGrowing.cpp  PlaneAwareRegionGrowing.h  PointCloudGenWNoiseRhino.py  README.md  Rhino3DPO.01.py  Rhino3DPO.02.py  Rhino3DPO.py  Settings.cpp  Settings.h  ShapeFinder copy.cpp  ShapeFinder.cpp  ShapeFinder.h  TEST_STEPS.md  Twinner.py  Twinner.rui  basic_import_test.py  bindingTest.py  build_py39.bat  build_windows.ps1  build_windows_ci.bat  build_windows_ci.ps1  check_compile.bat  check_deps.py  check_dlls.bat  example.py  main  main.cpp  main.py  process_wsl.sh  quad.xyz  rhino_client.py  run_test_flow.ps1  runtests.py  shapes.cpp  (+8 more)
tests/pcl_hybrid/bindings/: py_pcl_hybrid.cpp
tests/pcl_hybrid/build_py3/: CMakeCache.txt
tests/pcl_hybrid/build_py39/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pcl_hybrid.sln  pcl_hybrid.vcxproj  pcl_hybrid.vcxproj.filters  pcl_hybrid_core.vcxproj  pcl_hybrid_core.vcxproj.filters  pcl_hybrid_py.vcxproj  pcl_hybrid_py.vcxproj.filters
tests/pcl_hybrid/build_py39/Debug/: pcl_hybrid_py.cp39-win_amd64.pyd  pcl_hybrid_py.exp  pcl_hybrid_py.lib  pcl_hybrid_py.pyd
tests/pcl_hybrid/build_py39/Release/: pcl_hybrid_py.cp39-win_amd64.pyd  pcl_hybrid_py.exp
tests/pcl_hybrid/build_py39/pcl_hybrid.dir/Debug/: pcl_hybrid.exe.recipe
tests/pcl_hybrid/build_py39/pcl_hybrid.dir/Debug/pcl_hybrid.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/pcl_hybrid/build_py39/pcl_hybrid.dir/Release/: pcl_hybrid.exe.recipe
tests/pcl_hybrid/build_py39/pcl_hybrid.dir/Release/pcl_hybrid.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  pcl_hybrid.lastbuildstate
tests/pcl_hybrid/build_py39/pcl_hybrid_core.dir/Debug/: pcl_hybrid_core.lib.recipe
tests/pcl_hybrid/build_py39/pcl_hybrid_core.dir/Debug/pcl_hybrid_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  pcl_hybrid_core.lastbuildstate
tests/pcl_hybrid/build_py39/pcl_hybrid_core.dir/Release/: pcl_hybrid_core.lib.recipe
tests/pcl_hybrid/build_py39/pcl_hybrid_core.dir/Release/pcl_hybrid_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
tests/pcl_hybrid/build_py39/pcl_hybrid_py.dir/Debug/: pcl_hybrid_py.cp39-win_amd64.pyd.recipe
tests/pcl_hybrid/build_py39/pcl_hybrid_py.dir/Debug/pcl_hybrid_py.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/pcl_hybrid/build_py39/pcl_hybrid_py.dir/Release/: pcl_hybrid_py.cp39-win_amd64.pyd.recipe
tests/pcl_hybrid/build_py39/pcl_hybrid_py.dir/Release/pcl_hybrid_py.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/pcl_hybrid/build_py39/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
tests/pcl_hybrid/build_py39/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
tests/pcl_hybrid/data/: cyl1.xyz  cyl2.xyz  cyl3.xyz  out2.json  output.json  output_cpp_cli.json  output_py.json  output_py_cli.json  pcl_settings.json.NOT  pipe and planes.xyz  pipes and tubes.3dm  pipes and tubes.3dmbak  planes.xyz  small_mep.rcp  tmp.xyz
tests/pcl_hybrid/data/small_mep Support/: small_mep.rcp.bk1
tests/pcl_hybrid/misc/: headless_processor.cpp
tests/pcl_py/: pclpy_test01.py  run.bat
